--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Contact us, !MetaDescription">
-    <meta name="keywords" content="contact us, !MetaKeywords">
+    <meta name="description" content="Contact us,Bed Bug Treatment Prices and costs">
+    <meta name="keywords" content="contact us,Bed Bug Treatment Price, bedbugs">
     <meta name="author" content="">
 
-    <title>Contact Us | !HomeTitle</title>
-<link rel="canonical" href="!self" />
+    <title>Contact Us | Bed Bug Treatment Price</title>
+<link rel="canonical" href="https://wildlifeguy.github.io/BBPriceT4/contact.html" />
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
 
@@ -71,14 +71,16 @@ input[type=submit]:hover {
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-       <a class="navbar-brand" href="!homeLink">!SiteName</a>
+       <a class="navbar-brand" href="https://wildlifeguy.github.io/BBPriceT4/"><!--Site Name-->
+Bed Bug Treatment Price
+<!--endSite Name--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="!homeLink">Home
+              <a class="nav-link" href="https://wildlifeguy.github.io/BBPriceT4/">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -103,7 +105,9 @@ input[type=submit]:hover {
 
         <!-- Post Content Column -->
         <div class="col-lg-8">
-		<div><p>Contact <strong>!SiteName</strong> using the forum below</p></div>
+		<div><p>Contact <strong><!--Site Name-->
+Bed Bug Treatment Price
+<!--endSite Name--></strong> using the forum below</p></div>
 
         <h3>Contact Form</h3>
 
@@ -192,7 +196,11 @@ input[type=submit]:hover {
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">!FooterText</p>
+        <p class="m-0 text-center text-white"><!--Footer-->
+Green Valley Wildlife Solutions
+Mount Vernon, OH
+(740) 501-6294
+<!--endFooter--></p>
       </div>
       <!-- /.container -->
     </footer>
