--- a/sitemap.html
+++ b/sitemap.html
@@ -5,13 +5,13 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Sitemap - !MetaDescription">
-    <meta name="keywords" content="Sitemap,!MetaKeywords">
+    <meta name="description" content="Bed Bug Treatment Prices and costs">
+    <meta name="keywords" content="Sitemap,Bed Bug Treatment Price, bedbugs">
 
     <meta name="author" content="">
 
-    <title>Sitemap - !HomeTitle</title>
-<link rel="canonical" href="!self" />
+    <title>Bed Bug Treatment Price</title>
+<link rel="canonical" href="https://wildlifeguy.github.io/BBPriceT4/sitemap.html" />
     <!-- Bootstrap core CSS -->
    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
 
@@ -37,14 +37,16 @@ body {
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="!homeLink">!SiteName</a>
+        <a class="navbar-brand" href="https://wildlifeguy.github.io/BBPriceT4/"><!--Site Name-->
+Bed Bug Treatment Price
+<!--endSite Name--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="!homeLink">Home
+              <a class="nav-link" href="https://wildlifeguy.github.io/BBPriceT4/">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
@@ -73,7 +75,7 @@ body {
           
 		  <div class="my-posts">
 
-<h1>sitemap for <a href="!homeLink">!sitename</a></h1>
+<h1>sitemap for <a href="https://wildlifeguy.github.io/BBPriceT4/">!sitename</a></h1>
 <br>
 <hr>
 <!--sitemap-->				
@@ -144,7 +146,11 @@ body {
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">!FooterText</p>
+        <p class="m-0 text-center text-white"><!--Footer-->
+Green Valley Wildlife Solutions
+Mount Vernon, OH
+(740) 501-6294
+<!--endFooter--></p>
       </div>
       <!-- /.container -->
     </footer>
